<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bye Ads</string>
    <string name="app_name2">New Bye Ads Version</string>
    <string name="notif_short">Bye Ads Update</string>
    <string name="notif_detailed">New hostnames are now available to update your system.</string>
    <string name="download_install">Download &amp; Install Hosts</string>
    <string name="revert">Revert</string>
    <string name="check_server">Check server for updates daily.</string>
    <string name="autoupdate">Automatically update.</string>
    <string name="sponsored_by">Proudly brought to you by nikkdotcom.us If you like this app, please show your support by donating to help us cover bandwidth costs and enable us to purchase and support new devices.</string>
    <string name="use_localhost">Use 127.0.0.1</string>
    <string name="will_use_localhost">Will use localhost IP</string>
    <string name="use_btc">Use BTC IP</string>
    <string name="will_use_btc">Will use BTC IP</string>
    <string name="use_custom">Use Custom IP</string>
    <string name="will_use_custom">Will use custom IP</string>
    <string name="please_wait">Please wait while I determine if the local hosts file is up to date.</string>
    <string name="something_bad">Something bad happened.</string>
    <string name="no_cat">Unable to find cat</string>
    <string name="no_cat_more">Cannot locate the cat util on your system, please email me to tell me where to find the cat util on your ROM.</string>
    <string name="ok">Ok</string>
    <string name="good_to_go">"You're good to go!"</string>
    <string name="good_to_go_more">No need to update, your system already has the latest version.</string>
    <string name="update_found">Update Found!</string>
    <string name="update_found_more">New hostnames have been added to the list, update now to block them.</string>
    <string name="update_check_enabled">Update Check Enabled.</string>
    <string name="update_check_disabled">Update Check Disabled.</string>
    <string name="donate">Donate</string>
    <string name="faq_help">FAQ/Help</string>
    <string name="about">About</string>
    <string name="error">Error</string>
    <string name="failed_remount_ro">Failed to remount system partition read-only.</string>
    <string name="failed_remount_rw">Failed to remount system partition read-write.</string>
    <string name="failed_revert">Failed to revert your hosts file, the echo command seems to be missing.</string>
    <string name="unknown_system_partition">Unable to determine the system partition.</string>
    <string name="connecting">Connecting...</string>
    <string name="please_wait2">Please wait while your hosts file is updated.</string>
    <string name="failed_to_download">Failed to download hosts file.</string>
    <string name="failed_to_replace">Failed to replace your hosts file. Error message:</string>
    <string name="failed_to_cleanup">Failed to clean up temporary files.</string>
    <string name="reverting">Reverting...</string>
    <string name="please_wait3">Please wait while your hosts file is reverted.</string>
    <string name="success">Success!</string>
    <string name="success_more">Your Android device should now be saying Bye Ads, however you might need to reboot to clear your DNS cache.</string>
    <string name="out_of_date">Out of Date</string>
    <string name="too_old">This copy of Bye Ads is too old, please update to a newer version.</string>
    <string name="no_root">Unable to get root.</string>
    <string name="no_root_more">I was unable to get root access, without this you cannot install a replacement hosts file. Click OK to find out how to root your phone.</string>
    <string name="failed_to_remove">Failed to remove /system/etc/hosts so it could be replaced. Error message:</string>
    <string name="failed_to_link">Failed to link /data/hosts to /system/etc/hosts. Error message:</string>
    <string name="symlink">Use /data/hosts symlink</string>
    <string name="create_symlink">Create symlink if needed</string>
    <string name="failed_to_chmod">Failed to change mode of hosts file to 0644. Error message:</string>
    <string name="failed_to_chown">Failed to change permissions of hosts file to root. Error message:</string>
    <string name="cancel">Cancel</string>
    <string name="signin">Sign In</string>
    <string name="auth">Authenticate</string>
    <string name="runTCPdump">Run TCPdump</string>
    <string name="localWebserver">Local Webserver</string>
    <string name="autoUpdate">Automatically Apply Updates</string>
    <string name="emailAddress">Email Address</string>
    <string name="passPhrase">Your Pass Phrase</string>
    <string name="Register">Register</string>
    <string name="Authenticate">Authenticate</string>
    <string name="Skip">Skip</string>
    <string name="wouldYouLikeTo">Would you like to...</string>
    <string name="seeTCPdumpdata">View TCP host names</string>
    <string name="wipe_tcpdump">Wipe TCP Log</string>
    <string name="failed_to_wipe_TCPdump">Failed to wipe TCPdump Log</string>
    <string name="boot_normally">Bootup Normally</string>
    <string name="boot_normally2">Bootup Normally?</string>
    <string name="boot_normally3">Bootup Normally or Show TCPdump Screen?</string>
    <string name="skip_this">Skip this screen in future</string>
    <string name="need_update">Update Available</string>
    <string name="need_update2">There is a new version available, would you like to download it now?</string>
    <string name="skip_update">Skip Update</string>
    <string name="do_update">Do Update</string>
    <string name="wipe_block">Wipe Block Log</string>
    <string name="failed_to_wipe_Block">Failed to wipe block log</string>
    <string name="seeBlockList">View Blocked host names</string>
    <string name="showDuplicates">Show Duplicates</string>
    <string name="hideDuplicates">Hide Duplicates</string>
    <string name="refreshList">Refresh List</string>
</resources>
