<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableLayout
        android:id="@id/score_table"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <CheckBox
            android:id="@id/CheckBox01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_server" />

        <CheckBox
            android:id="@id/CheckBox06"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoUpdate"
            android:visibility="invisible" />

        <CheckBox
            android:id="@id/CheckBox02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/symlink" />

        <CheckBox
            android:id="@id/CheckBox03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_symlink"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@id/RadioGroup01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@id/RadioButton01"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/use_localhost" />

                    <RadioButton
                        android:id="@id/RadioButton03"
                        android:layout_width="171.0dip"
                        android:layout_height="64.0dip"
                        android:text="@string/use_custom" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <CheckBox
                    android:id="@id/CheckBox04"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/localWebserver" />

                <CheckBox
                    android:id="@id/CheckBox05"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/runTCPdump" />
            </LinearLayout>
        </LinearLayout>

        <EditText
            android:id="@id/EditText01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="127.0.0.1" />

        <Button
            android:id="@id/Button01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_install" />

        <Button
            android:id="@id/Button02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/revert" />

        <TextView
            android:id="@id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sponsored_by" />
    </TableLayout>
</ScrollView>